Finished with HTML markup

--- a/index.html
+++ b/index.html
@@ -12,5 +12,51 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Mustang</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <div class="container">
+        <div class="logo">
+          <i class="fas fa-car"></i>
+          Mustang
+        </div>
+        <nav class="main-nav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Price</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div>
+          <a href="#" class="btn">Book Appointment</a>
+        </div>
+      </div>
+    </header>
+    <main class="main-section">
+      <div class="container">
+        <div class="text-content">
+          <h1 class="main-heading">Your Car Repairs</h1>
+          <p>Visit us for your experience</p>
+          <a href="#" class="btn">Book Appointment</a>
+        </div>
+      </div>
+    </main>
+
+    <footer class="main-footer">
+      <div class="container">
+        <div class="box-footer">
+          <h2 class="text-primary">Our Location:</h2>
+          <p>15 Street Suburb Country 6000</p>
+        </div>
+        <div class="box-footer">
+          <h2 class="text-primary">Phone</h2>
+          <p>+61 040 400 4000</p>
+        </div>
+        <div class="box-footer">
+          <h2 class="text-primary">Email</h2>
+          <p>automotive@carsales.com.au</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
