--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container flex">
         <div class="logo">
           <i class="fas fa-car"></i>
           Mustang
