Styled the main footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="main-section">
       <div class="container">
         <div class="text-content">
-          <h1 class="main-heading">Your Car Repairs</h1>
+          <h1 class="text-primary">Your Car Repairs</h1>
           <p>Visit us for your experience</p>
           <a href="#" class="btn">Book Appointment</a>
         </div>
@@ -45,7 +45,7 @@
     </main>
 
     <footer class="main-footer">
-      <div class="container">
+      <div class="container flex">
         <div class="box-footer">
           <h2 class="text-primary">Our Location:</h2>
           <p>15 Street Suburb Country 6000</p>
